[gd_scene load_steps=16 format=3 uid="uid://s2us3nw0ve40"]

[ext_resource type="Script" path="res://ShotBlood/shot_blood.gd" id="1_8o2ca"]
[ext_resource type="Texture2D" uid="uid://cqhg65woh8n83" path="res://ShotBlood/Assets/ShotBlood-Sheet.png" id="1_ikw4c"]
[ext_resource type="AudioStream" uid="uid://bl8t52gq1evlc" path="res://ShotBlood/Assets/bubble-pop.mp3" id="3_m0flp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2g68p"]
radius = 7.28011

[sub_resource type="CircleShape2D" id="CircleShape2D_bea2l"]
radius = 7.0

[sub_resource type="Animation" id="Animation_inynl"]
resource_name = "Explode"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShotBloodSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BubbleExplode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_u5haq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShotBloodSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShotBloodSprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_nq01u"]
resource_name = "Run"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShotBloodSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BubblePop")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_m0flp")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qof8r"]
_data = {
"Explode": SubResource("Animation_inynl"),
"RESET": SubResource("Animation_u5haq"),
"Run": SubResource("Animation_nq01u")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cc1nh"]
animation = &"Explode"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p22h5"]
animation = &"Run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_im8to"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2t1c7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5a50r"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pylqx"]
states/Explode/node = SubResource("AnimationNodeAnimation_cc1nh")
states/Explode/position = Vector2(687, 95)
states/Run/node = SubResource("AnimationNodeAnimation_p22h5")
states/Run/position = Vector2(477, 89)
transitions = ["Start", "Run", SubResource("AnimationNodeStateMachineTransition_im8to"), "Run", "Explode", SubResource("AnimationNodeStateMachineTransition_2t1c7"), "Explode", "End", SubResource("AnimationNodeStateMachineTransition_5a50r")]

[node name="ShotBlood" type="CharacterBody2D" groups=["Weapon"]]
script = ExtResource("1_8o2ca")

[node name="ShotBloodSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_ikw4c")
hframes = 9
vframes = 9
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.937141, 0.937141)
shape = SubResource("CircleShape2D_2g68p")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.07645, 1.07645)
shape = SubResource("CircleShape2D_bea2l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qof8r")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
deterministic = false
tree_root = SubResource("AnimationNodeStateMachine_pylqx")
anim_player = NodePath("../AnimationPlayer")

[node name="BubblePop" type="AudioStreamPlayer2D" parent="."]
volume_db = 20.475

[node name="BubbleExplode" type="AudioStreamPlayer2D" parent="."]
volume_db = 20.475

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
